Fix: HOTFIX Cart counter.

--- a/public/static/locales/en_US/common.json
+++ b/public/static/locales/en_US/common.json
@@ -112,5 +112,6 @@
 
     "filter_hide_unavailable": "Hide unavailable",
     "filter_hide_out_of_stock": "Hide out of stock",
-    "filter_show": "Filter products"
+    "filter_show": "Filter products",
+    "forgot_password": "Forgot your password?"
 }
