--- a/public/locales/en-US/product.json
+++ b/public/locales/en-US/product.json
@@ -1,6 +1,6 @@
 {
     "add_to_cart": "Add to cart",
-    "adding_to_cart": "Adding",
+    "adding_to_cart": "Adding...",
     "out_of_stock": "Out of stock",
     "quantity": "Quantity",
     "ingredients": "Ingredients"
