--- a/public/locales/en-GB/product.json
+++ b/public/locales/en-GB/product.json
@@ -1,5 +1,6 @@
 {
     "add_to_cart": "Add to cart",
+    "added_to_cart": "Added to cart!",
     "adding_to_cart": "Adding...",
     "out_of_stock": "Out of stock",
     "quantity": "Quantity",
