UI: Add floating CTA to `CartPage`.

--- a/public/static/locales/en_US/common.json
+++ b/public/static/locales/en_US/common.json
@@ -25,6 +25,7 @@
     "post": "Post",
     "close": "Close",
     "checkout": "Checkout",
+    "begin_checkout": "Begin Checkout",
 
     "from": "From",
     "total": "total",
