CMS+i18n: Make the Cart page dynamic and add more translated strings.

--- a/public/locales/de/cart.json
+++ b/public/locales/de/cart.json
@@ -1,7 +1,9 @@
 {
     "add-order-note": "Schreiben Sie eine Nachricht zu Ihrer Bestellung.",
+    "away-from-getting": "Bis zu",
     "continue-to-checkout": "Zur Kasse gehen",
     "estimated-total": "Geschätzte Gesamtsumme",
+    "free-shipping": "KOSTENLOSEM Versand",
     "order-summary": "Bestellübersicht",
     "promo-codes": "Aktionscodes",
     "sale-discount": "Sale-Rabatt",
