--- a/public/locales/sv/cart.json
+++ b/public/locales/sv/cart.json
@@ -1,7 +1,9 @@
 {
     "add-order-note": "Skriv ett meddelande till oss om din beställning.",
+    "away-from-getting": "Kvar tills du får",
     "continue-to-checkout": "Gå till kassan",
     "estimated-total": "Est. Total",
+    "free-shipping": "FRI FRAKT",
     "order-summary": "Ordersammanfattning",
     "promo-codes": "Rabattkoder",
     "sale-discount": "Kampanjrabatt",
