Everywhere: Fix FRO-46 and fix FRO-64.
Plus a whole lot more that probably should have been separate commits.

--- a/apps/web/src/locales/de.json
+++ b/apps/web/src/locales/de.json
@@ -17,9 +17,7 @@
         "added-to-cart": "Hinzugefügt!",
         "cart-not-ready": "Einen augenblick...",
         "out-of-stock": "Ausverkauft",
-        "quantity": "Menge"
-    },
-    "header": {
+        "quantity": "Menge",
         "language-and-region-settings": "Einstellungen für Sprache und Region"
     }
 }
