--- a/apps/web/src/locales/en.json
+++ b/apps/web/src/locales/en.json
@@ -14,6 +14,8 @@
     },
     "common": {
         "add-to-cart": "Add to Cart",
+        "add": "Add",
+        "buy": "Buy",
         "added-to-cart": "Added!",
         "cart-not-ready": "Hang on...",
         "out-of-stock": "Out of Stock",
