--- a/apps/web/src/locales/de.json
+++ b/apps/web/src/locales/de.json
@@ -14,6 +14,8 @@
     },
     "common": {
         "add-to-cart": "In den Warenkorb",
+        "add": "Hinzufügen",
+        "buy": "Kaufen",
         "added-to-cart": "Hinzugefügt!",
         "cart-not-ready": "Einen augenblick...",
         "out-of-stock": "Ausverkauft",
