BlogPage: Implement the blog page (resolves FRO-16).
A whole bunch of other things also got completed that should've probably
been in their own PR but we're behind, so let's move as fast as possible
for now.

--- a/apps/web/src/locales/de.json
+++ b/apps/web/src/locales/de.json
@@ -15,11 +15,14 @@
     "common": {
         "add-to-cart": "In den Warenkorb",
         "add": "Hinzufügen",
-        "buy": "Kaufen",
         "added-to-cart": "Hinzugefügt!",
+        "buy": "Kaufen",
         "cart-not-ready": "Einen augenblick...",
+        "cart": "Warenkorb",
+        "language-and-region-settings": "Einstellungen für Sprache und Region",
         "out-of-stock": "Ausverkauft",
+        "quantity-too-low": "Die Menge ist zu niedrig",
         "quantity": "Menge",
-        "language-and-region-settings": "Einstellungen für Sprache und Region"
+        "search": "Suche"
     }
 }
