API: Add `ShopApi` and `ShopsApi` to deal with tenant configurations.
This is a huge step towards proper multi-tennancy.

--- a/apps/web/src/locales/de.json
+++ b/apps/web/src/locales/de.json
@@ -19,6 +19,7 @@
         "buy": "Kaufen",
         "cart-not-ready": "Einen augenblick...",
         "cart": "Warenkorb",
+        "countries": "Länder",
         "language-and-region-settings": "Einstellungen für Sprache und Region",
         "out-of-stock": "Ausverkauft",
         "quantity-too-low": "Die Menge ist zu niedrig",
