--- a/apps/web/src/locales/en.json
+++ b/apps/web/src/locales/en.json
@@ -19,6 +19,7 @@
         "buy": "Buy",
         "cart-not-ready": "Hang on...",
         "cart": "Cart",
+        "countries": "Countries",
         "language-and-region-settings": "Language and Region settings",
         "out-of-stock": "Out of Stock",
         "quantity-too-low": "Too Low Quantity",
