--- a/apps/web/src/locales/sv.json
+++ b/apps/web/src/locales/sv.json
@@ -19,6 +19,7 @@
         "buy": "Köp",
         "cart-not-ready": "En sekund...",
         "cart": "Varukorgen",
+        "countries": "Länder",
         "language-and-region-settings": "Språk- och regioninställningar",
         "out-of-stock": "Slutsåld",
         "quantity-too-low": "För lågt antal",
