Header+Cart+Footer: Improve layouts and styling.
This also fixes a few logic issues and improves the automatic `light` /
`dark` color generation from the base accent color(s). (TODO: This
should be configurable).

--- a/apps/web/src/locales/de.json
+++ b/apps/web/src/locales/de.json
@@ -5,6 +5,7 @@
         "continue-to-checkout": "Zur Kasse gehen",
         "estimated-total": "Geschätzte Gesamtsumme",
         "free-shipping": "KOSTENLOSEM Versand",
+        "free-shipping-on-this-order": "KOSTENLOSEM Versand für diese Bestellung!",
         "order-summary": "Bestellübersicht",
         "promo-codes": "Aktionscodes",
         "sale-discount": "Sale-Rabatt",
