--- a/apps/web/src/locales/sv.json
+++ b/apps/web/src/locales/sv.json
@@ -5,6 +5,7 @@
         "continue-to-checkout": "Gå till kassan",
         "estimated-total": "Est. Total",
         "free-shipping": "FRI Frakt",
+        "free-shipping-on-this-order": "FRI Frakt på denna beställning!",
         "order-summary": "Ordersammanfattning",
         "promo-codes": "Rabattkoder",
         "sale-discount": "Kampanjrabatt",
