--- a/apps/web/src/locales/en.json
+++ b/apps/web/src/locales/en.json
@@ -5,6 +5,7 @@
         "continue-to-checkout": "Continue to Checkout",
         "estimated-total": "Est. Total",
         "free-shipping": "FREE Shipping",
+        "free-shipping-on-this-order": "You're getting FREE Shipping on this order!",
         "order-summary": "Order Summary",
         "promo-codes": "Promo Codes",
         "sale-discount": "Sale Discount",
