--- a/apps/web/src/locales/en.json
+++ b/apps/web/src/locales/en.json
@@ -26,6 +26,7 @@
         "out-of-stock": "Out of Stock",
         "quantity-too-low": "Too Low Quantity",
         "quantity": "Quantity",
-        "search": "Search"
+        "search": "Search",
+        "view-cart": "View your shopping cart"
     }
 }
