--- a/apps/web/src/locales/de.json
+++ b/apps/web/src/locales/de.json
@@ -12,7 +12,8 @@
         "sale-discount": "Sale-Rabatt",
         "shipping": "Versand",
         "shipping-calculated-at-checkout": "Versand wird an der Kasse berechnet",
-        "subtotal": "Zwischensumme"
+        "subtotal": "Zwischensumme",
+        "view-cart": "Warenkorb ansehen"
     },
     "common": {
         "add-to-cart": "In den Warenkorb",
@@ -26,7 +27,6 @@
         "out-of-stock": "Ausverkauft",
         "quantity-too-low": "Die Menge ist zu niedrig",
         "quantity": "Menge",
-        "search": "Suche",
-        "view-cart": "Warenkorb ansehen"
+        "search": "Suche"
     }
 }
