Components: Migrate more to `scss` modules.

--- a/apps/web/src/locales/en.json
+++ b/apps/web/src/locales/en.json
@@ -5,8 +5,9 @@
         "away-from-getting": "away from getting",
         "continue-to-checkout": "Continue to Checkout",
         "estimated-total": "Est. Total",
-        "free-shipping-on-this-order": "You're getting FREE Shipping on this order!",
+        "free-shipping-on-this-order": "Sweet! This order qualifies for FREE shipping!",
         "free-shipping": "FREE Shipping",
+        "away-from-free-shipping": "You're only {0} away from getting FREE shipping on this order",
         "order-summary": "Order Summary",
         "promo-codes": "Promo Codes",
         "sale-discount": "Sale Discount",
