Cart: Improve cart design and experience.

--- a/apps/web/src/locales/en.json
+++ b/apps/web/src/locales/en.json
@@ -2,13 +2,15 @@
     "cart": {
         "add-n-to-your-cart": "Add {0} to your cart",
         "add-order-note": "Add a note to your order.",
+        "away-from-free-shipping": "You're only {0} away from getting FREE shipping on this order",
         "away-from-getting": "away from getting",
         "continue-to-checkout": "Continue to Checkout",
         "estimated-total": "Est. Total",
         "free-shipping-on-this-order": "Sweet! This order qualifies for FREE shipping!",
         "free-shipping": "FREE Shipping",
-        "away-from-free-shipping": "You're only {0} away from getting FREE shipping on this order",
+        "label-cart-note": "Add a note",
         "order-summary": "Order Summary",
+        "placeholder-cart-note": "How can we make this a memorable experience for you? Any Special requests or instructions you'd like us to know?",
         "promo-codes": "Promo Codes",
         "sale-discount": "Sale Discount",
         "shipping-calculated-at-checkout": "Shipping calculated at checkout",
