Breadcrumbs: Add `title` prop.

--- a/apps/web/src/locales/en.json
+++ b/apps/web/src/locales/en.json
@@ -11,6 +11,7 @@
         "label-cart-note": "Add a note",
         "order-summary": "Order Summary",
         "placeholder-cart-note": "How can we make this a memorable experience for you? Any special requests or instructions you'd like us to know about?",
+        "products": "Products",
         "promo-codes": "Promo Codes",
         "sale-discount": "Sale Discount",
         "shipping-calculated-at-checkout": "Shipping calculated at checkout",
