ProductPage: Add `<RecommendedProducts/>` component.

--- a/apps/web/src/locales/en.json
+++ b/apps/web/src/locales/en.json
@@ -2,7 +2,7 @@
     "cart": {
         "add-n-to-your-cart": "Add {0} to your cart",
         "add-order-note": "Add a note to your order.",
-        "away-from-free-shipping": "Don't miss out on a great deal... Add items worth an additional {0} to your order and get completely FREE shipping, on the house!",
+        "away-from-free-shipping": "Don't miss out on a great deal! Add items worth an additional {0} to your order and get completely FREE shipping, on the house,",
         "away-from-getting": "away from getting",
         "continue-to-checkout": "Continue to Checkout",
         "estimated-total": "Est. Total",
@@ -32,5 +32,8 @@
         "quantity-too-low": "Too Low Quantity",
         "quantity": "Quantity",
         "search": "Search"
+    },
+    "product": {
+        "recommendations": "Frequently enjoyed together with these products"
     }
 }
