--- a/apps/storefront/src/locales/sv.json
+++ b/apps/storefront/src/locales/sv.json
@@ -31,6 +31,7 @@
         "search": "Sök"
     },
     "product": {
-        "recommendations": "Komplettera upplevelsen med dessa populära tillägg"
+        "recommendations": "Komplettera upplevelsen med dessa populära tillägg",
+        "SKUs": "Artikelnummer"
     }
 }
