--- a/apps/storefront/src/locales/fr.json
+++ b/apps/storefront/src/locales/fr.json
@@ -33,6 +33,7 @@
         "search": "Recherche"
     },
     "product": {
-        "recommendations": "D'autres clients ont également apprécié ces produits ensemble"
+        "recommendations": "D'autres clients ont également apprécié ces produits ensemble",
+        "SKUs": "SKUs"
     }
 }
