Storefront: Improve how cart handles discounts.

--- a/apps/storefront/src/locales/de.json
+++ b/apps/storefront/src/locales/de.json
@@ -11,6 +11,7 @@
         "placeholder-cart-note": "Wie können wir das zu einem besonderen Erlebnis für Sie machen? Gibt es etwas, das wir beachten sollten?",
         "promo-codes": "Aktionscodes",
         "sale-discount": "Sale-Rabatt",
+        "discount": "Rabatt",
         "shipping-calculated-at-checkout": "Versand wird an der Kasse berechnet",
         "shipping": "Versand",
         "subtotal": "Zwischensumme",
