Storefront: Add wishlist stub and improve suspense boundaries.

--- a/apps/storefront/src/locales/de.json
+++ b/apps/storefront/src/locales/de.json
@@ -33,6 +33,7 @@
     },
     "product": {
         "recommendations": "Andere Kunden genießen diese Produkte auch zusammen",
-        "SKUs": "SKUs"
+        "SKUs": "SKUs",
+        "add-to-wishlist": "Zum Wunschliste hinzufügen"
     }
 }
