Storefront: Drastically improve quantity input.
The quantity input text field now scales with the width of the input,
e.g. it grows.

A bunch of unnecessary suspense boundaries have also been removed
simplifying the code and making it easier to read.

--- a/apps/storefront/src/locales/de.json
+++ b/apps/storefront/src/locales/de.json
@@ -29,6 +29,8 @@
         "out-of-stock": "Ausverkauft",
         "quantity-too-low": "Die Menge ist zu niedrig",
         "quantity": "Menge",
+        "increase": "Erhöhen",
+        "decrease": "Verringern",
         "search": "Suche"
     },
     "product": {
