--- a/apps/storefront/src/locales/fr.json
+++ b/apps/storefront/src/locales/fr.json
@@ -32,6 +32,8 @@
         "out-of-stock": "En rupture de stock",
         "quantity-too-low": "Quantité trop faible",
         "quantity": "Quantité",
+        "increase": "Augmenter",
+        "decrease": "Diminuer",
         "search": "Recherche"
     },
     "product": {
