Storefront: Improve `<ProductCard/>` & `<IconGrid/>` designs.

--- a/apps/storefront/src/locales/no.json
+++ b/apps/storefront/src/locales/no.json
@@ -21,7 +21,7 @@
         "view-cart": "Se handlekurven din"
     },
     "common": {
-        "add-to-cart": "Legg i handlekurv",
+        "add-to-cart": "Kjøpe",
         "add": "Legg til",
         "added-to-cart": "Lagt til!",
         "buy": "Kjøp",
