--- a/apps/storefront/src/locales/sv.json
+++ b/apps/storefront/src/locales/sv.json
@@ -19,7 +19,7 @@
         "view-cart": "Visa varukorgen"
     },
     "common": {
-        "add-to-cart": "Lägg till",
+        "add-to-cart": "Köp",
         "add": "Lägg till",
         "added-to-cart": "Tillagd!",
         "buy": "Köp",
