Storefront: Redesign product page.
This is a major redesign of the product page.

--- a/apps/storefront/src/locales/en.json
+++ b/apps/storefront/src/locales/en.json
@@ -40,7 +40,7 @@
         "remove": "Remove"
     },
     "product": {
-        "recommendations": "Other customers also enjoy these products together",
+        "recommendations": "People with similar taste as you also loved these",
         "skus": "SKUs",
         "add-to-wishlist": "Add to Wishlist"
     }
