Storefront: Replace `Header` and Improve text legibility.
This is a huge commit, should've been split up into smaller commits
however, there's not enough time to do everything properly. :/

--- a/apps/storefront/src/locales/de.json
+++ b/apps/storefront/src/locales/de.json
@@ -31,7 +31,12 @@
         "quantity": "Menge",
         "increase": "Erhöhen",
         "decrease": "Verringern",
-        "search": "Suche"
+        "search": "Suche",
+        "contact": "Kontakt",
+        "email": "E-Mail",
+        "phone": "Telefon",
+        "email-tooltip": "Senden Sie uns eine E-Mail",
+        "phone-tooltip": "Rufen Sie uns an"
     },
     "product": {
         "recommendations": "Andere Kunden genießen diese Produkte auch zusammen",
