Storefront: Improve product page design and normalize product card bg.
Not all products have a transparent background, so for now we flip the
gray from the product image to the description. In the future we might
want to process each product image to dynamically detected if it has a
background or not.

--- a/apps/storefront/src/locales/en.json
+++ b/apps/storefront/src/locales/en.json
@@ -47,6 +47,8 @@
     "product": {
         "recommendations": "People with similar taste as you also loved these",
         "skus": "SKUs",
-        "add-to-wishlist": "Add to Wishlist"
+        "add-to-wishlist": "Add to Wishlist",
+        "by": "by",
+        "browse-all-products-by-brand": "Browse all products by {0}"
     }
 }
